@@ -35,8 +35,6 @@ public:
     virtual void setting(const std::string&, const std::string&) const;
     virtual std::string getLibsUsed(void) const;
 
-    static std::string  runCommand(const std::string& cmd);
-
 #ifndef __APPLE__
     enum class InhibitScreenServices {
         kScreenSaver,
