@@ -1460,7 +1460,7 @@ OSXScreen::mapScrollWheelToSynergy(SInt32 x) const
 {
 	// return accelerated scrolling
 	double d = (1.0 + getScrollSpeed()) * x;
-	return static_cast<SInt32>(m_scrollDirection * 120.0 * d);
+	return static_cast<SInt32>(120.0 * d);
 }
 
 SInt32
@@ -1468,7 +1468,8 @@ OSXScreen::mapScrollWheelFromSynergy(SInt32 x) const
 {
 	// use server's acceleration with a little boost since other platforms
 	// take one wheel step as a larger step than the mac does.
-	return static_cast<SInt32>(m_scrollDirection * 3.0 * x / 120.0);
+	auto result = static_cast<SInt32>(3.0 * x / 120.0);
+	return (result * ClientApp::instance().args().m_clientScrollDirection);
 }
 
 double
@@ -2212,17 +2213,6 @@ getProcessName(int pid)
     char buf[128];
     proc_name(pid, buf, sizeof(buf));
     return buf;
-}
-
-void
-OSXScreen::updateScrollDirection()
-{
-	if(m_shouldUpdateScrollDirection)
-	{
-		LOG((CLOG_DEBUG "updated scrolling direction"));
-		m_scrollDirection = [[[NSUserDefaults standardUserDefaults] objectForKey:@"com.apple.swipescrolldirection"] boolValue] ? -1 : 1;
-		m_shouldUpdateScrollDirection = false;
-	}
 }
 
 #pragma GCC diagnostic ignored "-Wdeprecated-declarations"
