@@ -114,6 +114,9 @@ ArgParser::parseClientArgs(lib::synergy::ClientArgs& args, int argc, const char*
         else if (isArg(i, argc, argv, nullptr, "--sync-language")) {
             args.m_enableLangSync = true;
         }
+        else if (isArg(i, argc, argv, nullptr, "--invert-scroll")) {
+            args.m_clientScrollDirection = lib::synergy::ClientScrollDirection::INVERT_SERVER;
+        }
         else {
             if (i + 1 == argc) {
                 args.m_synergyAddress = argv[i];
