@@ -127,6 +127,7 @@ ClientApp::help()
         "Usage: %s"
         " [--yscroll <delta>]"
         " [--sync-language]"
+        " [--invert-scroll]"
         WINAPI_ARG
         HELP_SYS_ARGS
         HELP_COMMON_ARGS
@@ -140,6 +141,7 @@ ClientApp::help()
         "      --yscroll <delta>    defines the vertical scrolling delta, which is\n"
         "                             120 by default.\n"
         "      --sync-language      set this parameter to enable language synchronization.\n"
+        "      --invert-scroll      invert scroll direction on this computer.\n"
         HELP_COMMON_INFO_2
         "\n"
         "* marks defaults.\n"
