@@ -114,11 +114,6 @@ Screen::enter(KeyModifierMask toggleMask)
     // now on screen
     m_entered = true;
 
-    // Forcefully update scrolling direction
-    // Will keep clients updated when moving cursor
-    m_screen->allowScrollDirectionUpdate();
-    m_screen->updateScrollDirection();
-
     m_screen->enter();
     if (m_isPrimary) {
         enterPrimary();
@@ -133,11 +128,6 @@ Screen::leave()
 {
     assert(m_entered == true);
     LOG((CLOG_INFO "leaving screen"));
-
-    // Forcefully update scrolling direction
-    // Will keep server updated when moving cursor
-    m_screen->allowScrollDirectionUpdate();
-    m_screen->updateScrollDirection();
 
     if (!m_screen->leave()) {
         return false;
@@ -222,11 +212,6 @@ Screen::keyUp(KeyID, KeyModifierMask, KeyButton button)
 void
 Screen::mouseDown(ButtonID button)
 {
-	// No other convinient way to check if scroll direction was changed
-	// If mouse button is pressed is good enough indication to allow checking
-	// for scroll direction
-	m_screen->allowScrollDirectionUpdate();
-
     m_screen->fakeMouseButton(button, true);
 }
 
@@ -251,12 +236,9 @@ Screen::mouseRelativeMove(SInt32 dx, SInt32 dy)
 }
 
 void
-Screen::mouseWheel(SInt32 xDelta, SInt32 yDelta)
+Screen::mouseWheel(SInt32 xDelta, SInt32 yDelta) const
 {
     assert(!m_isPrimary);
-    // update scroll direction if necessary
-    m_screen->updateScrollDirection();
-
     m_screen->fakeMouseWheel(xDelta, yDelta);
 }
 
